--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,15 @@ tmp/
 *.versionsBackup
 
 
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
